dojo.java


    public ResultFieldElement getValue() {
      Pointer p = getPointer();
      return new ResultFieldElement(p.getInt(0));
    }

    public void setValue(ResultFieldElement value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  @Structure.FieldOrder({"r", "s"})
  class Signature extends Structure implements Structure.ByValue {
    public Signature() {
      super();
    }

    public Signature(Pointer p) {
      super(p);
    }


    /**
     * The `r` value of a signature
     */
    public FieldElement r;

    /**
     * The `s` value of a signature
     */
    public FieldElement s;

  }

  @Structure.FieldOrder({"r", "s"})
  class SignatureByReference extends Structure implements Structure.ByReference {
    public SignatureByReference() {
      super();
    }

    public SignatureByReference(Pointer p) {
      super(p);
    }


    /**
     * The `r` value of a signature
     */
    public FieldElement r;

    /**
     * The `s` value of a signature
     */
    public FieldElement s;

  }



  class ResultSignature extends IntegerType {
    public ResultSignature() {
      super(4, true);
    }

    public ResultSignature(long value) {
      super(4, value, true);
    }

    public ResultSignature(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultSignature OkSignature = new ResultSignature(1);
    public static final ResultSignature ErrSignature = new ResultSignature(2);

  }

  class ResultSignatureByReference extends ByReference {
    public ResultSignatureByReference() {
      super(4);
    }

    public ResultSignatureByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultSignature getValue() {
      Pointer p = getPointer();
      return new ResultSignature(p.getInt(0));
    }

    public void setValue(ResultSignature value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class ResultProvider extends IntegerType {
    public ResultProvider() {
      super(4, true);
    }

    public ResultProvider(long value) {
      super(4, value, true);
    }

    public ResultProvider(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultProvider OkProvider = new ResultProvider(1);
    public static final ResultProvider ErrProvider = new ResultProvider(2);

  }

  class ResultProviderByReference extends ByReference {
    public ResultProviderByReference() {
      super(4);
    }

    public ResultProviderByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultProvider getValue() {
      Pointer p = getPointer();
      return new ResultProvider(p.getInt(0));
    }

    public void setValue(ResultProvider value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class ResultAccount extends IntegerType {
    public ResultAccount() {
      super(4, true);
    }

    public ResultAccount(long value) {
      super(4, value, true);
    }

    public ResultAccount(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultAccount OkAccount = new ResultAccount(1);
    public static final ResultAccount ErrAccount = new ResultAccount(2);

  }

  class ResultAccountByReference extends ByReference {
    public ResultAccountByReference() {
      super(4);
    }

    public ResultAccountByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultAccount getValue() {
      Pointer p = getPointer();
      return new ResultAccount(p.getInt(0));
    }

    public void setValue(ResultAccount value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  @Structure.FieldOrder({"to", "selector", "calldata"})
  class Call extends Structure implements Structure.ByValue {
    public Call() {
      super();
    }

    public Call(Pointer p) {
      super(p);
    }

    public FieldElement to;
    public ByteByReference selector;
    public CArrayFieldElement calldata;

  }

  @Structure.FieldOrder({"to", "selector", "calldata"})
  class CallByReference extends Structure implements Structure.ByReference {
    public CallByReference() {
      super();
    }

    public CallByReference(Pointer p) {
      super(p);
    }

    public FieldElement to;
    public ByteByReference selector;
    public CArrayFieldElement calldata;

  }




  /**
   * Block hash, number or tag
   */
  class BlockId extends IntegerType {
    public BlockId() {
      super(4, true);
    }

    public BlockId(long value) {
      super(4, value, true);
    }

    public BlockId(Pointer p) {
      this(p.getInt(0));
    }
    public static final BlockId Hash = new BlockId(1);
    public static final BlockId Number = new BlockId(2);
    public static final BlockId BlockTag_ = new BlockId(3);

  }

  class BlockIdByReference extends ByReference {
    public BlockIdByReference() {
      super(4);
    }

    public BlockIdByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public BlockId getValue() {
      Pointer p = getPointer();
      return new BlockId(p.getInt(0));
    }

    public void setValue(BlockId value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }


  ResultToriiClient client_new(ByteByReference torii_url, 
                               ByteByReference rpc_url, 
                               ByteByReference libp2p_relay_url, 
                               FieldElement world);

  void client_set_logger(ToriiClientByReference client, Callback logger);

  ResultCArrayu8 client_publish_message(ToriiClientByReference client, 
                                        ByteByReference message, 
                                        FieldElementByReference signature_felts, 
                                        _Size signature_felts_len);

  ResultCArrayEntity client_entities(ToriiClientByReference client, QueryByReference query);

  ResultCArrayEntity client_event_messages(ToriiClientByReference client, QueryByReference query);

  WorldMetadata client_metadata(ToriiClientByReference client);

  ResultSubscription client_on_entity_state_update(ToriiClientByReference client, 
                                                   EntityKeysClauseByReference clauses, 
                                                   _Size clauses_len, 
                                                   Callback callback);

  Resultbool client_update_entity_subscription(ToriiClientByReference client, 
                                               SubscriptionByReference subscription, 
                                               EntityKeysClauseByReference clauses, 
                                               _Size clauses_len);

  ResultSubscription client_on_event_message_update(ToriiClientByReference client, 
                                                    EntityKeysClauseByReference clauses, 
                                                    _Size clauses_len, 
                                                    Callback callback);

  Resultbool client_update_event_message_subscription(ToriiClientByReference client, 
                                                      SubscriptionByReference subscription, 
                                                      EntityKeysClauseByReference clauses, 
                                                      _Size clauses_len);

  ResultCArrayFieldElement bytearray_serialize(ByteByReference str);

  Resultc_char bytearray_deserialize(FieldElementByReference felts, _Size felts_len);

  FieldElement poseidon_hash(FieldElementByReference felts, _Size felts_len);

  ResultFieldElement get_selector_from_name(ByteByReference name);

  FieldElement get_selector_from_tag(ByteByReference tag);

  FieldElement starknet_keccak(ByteByReference bytes, _Size bytes_len);

  ResultFieldElement cairo_short_string_to_felt(ByteByReference str);

  Resultc_char parse_cairo_short_string(FieldElement felt);

  ResultFieldElement typed_data_encode(ByteByReference typed_data, FieldElement address);

  FieldElement signing_key_new();

  ResultSignature signing_key_sign(FieldElement private_key, FieldElement hash);

  FieldElement verifying_key_new(FieldElement signing_key);

  Resultbool verifying_key_verify(FieldElement verifying_key, FieldElement hash, Signature signature);

  ResultProvider provider_new(ByteByReference rpc_url);

  ResultAccount account_new(ProviderByReference rpc, 
                            FieldElement private_key, 
                            ByteByReference address);

  ResultCArrayFieldElement starknet_call(ProviderByReference provider, Call call, BlockId block_id);

  ResultAccount account_deploy_burner(ProviderByReference provider, 
                                      AccountByReference master_account, 
                                      FieldElement signing_key);

  FieldElement account_address(AccountByReference account);

  FieldElement account_chain_id(AccountByReference account);

  void account_set_block_id(AccountByReference account, BlockId block_id);

  ResultFieldElement account_nonce(AccountByReference account);

  ResultFieldElement account_execute_raw(AccountByReference account, 
                                         CallByReference calldata, 
                                         _Size calldata_len);

  Resultbool wait_for_transaction(ProviderByReference rpc, FieldElement txn_hash);

  FieldElement hash_get_contract_address(FieldElement class_hash, 
                                         FieldElement salt, 
                                         FieldElementByReference constructor_calldata, 
                                         _Size constructor_calldata_len, 
                                         FieldElement deployer_address);

  void subscription_cancel(SubscriptionByReference subscription);

  void client_free(ToriiClientByReference t);

  void provider_free(ProviderByReference rpc);

  void model_free(StructByReference model);

  void account_free(AccountByReference account);

  void ty_free(TyByReference ty);

  void entity_free(EntityByReference entity);

  void error_free(ErrorByReference error);

  void world_metadata_free(WorldMetadataByReference metadata);

  void carray_free(Pointer data, _Size data_len);

  void string_free(ByteByReference string);

  class _Size extends IntegerType {
    public _Size() {
      super(Native.POINTER_SIZE, true);
    }

    public _Size(long value) {
      super(Native.POINTER_SIZE, value, true);
    }

    public _Size(Pointer p) {
      this(Native.POINTER_SIZE == 8 ? p.getLong(0) : p.getInt(0));
    }

  }

  class _SizeByReference extends ByReference {
    public _SizeByReference() {
      super(Native.POINTER_SIZE);
    }

    public _SizeByReference(Pointer p) {
      super(Native.POINTER_SIZE);
      setPointer(p);
    }

    public _Size getValue() {
      Pointer p = getPointer();
      return new _Size(Native.POINTER_SIZE == 8 ? p.getLong(0) : p.getInt(0));
    }

    public void setValue(_Size value) {
      Pointer p = getPointer();
      if (Native.POINTER_SIZE == 8) { p.setLong(0, value.longValue()); } else { p.setInt(0, value.intValue()); }
    }

  }

  class _Boolean extends IntegerType {
    public _Boolean() {
      super(1, true);
    }

    public _Boolean(long value) {
      super(1, value, true);
    }

    public _Boolean(Pointer p) {
      this(p.getByte(0));
    }

    public static final _Boolean FALSE = new _Boolean(0);
    public static final _Boolean TRUE = new _Boolean(1);
  }

  class _BooleanByReference extends ByReference {
    public _BooleanByReference() {
      super(1);
    }

    public _BooleanByReference(Pointer p) {
      super(1);
      setPointer(p);
    }

    public _Boolean getValue() {
      Pointer p = getPointer();
      return new _Boolean(p.getByte(0));
    }

    public void setValue(_Boolean value) {
      Pointer p = getPointer();
      p.setByte(0, (byte)value.intValue());
    }

  }

}